fix(nav-bar): vertical alignment issue

--- a/chrome/includes/cascade-nav-bar.css
+++ b/chrome/includes/cascade-nav-bar.css
@@ -12,6 +12,8 @@
 #urlbar,
 #urlbar * {
 
+  padding-block-start: 1px !important;
+
   outline: none !important;
   box-shadow: none !important;
 
